examples/kju/positive/type_inference/simple_struct_definition.kju
struct A
{
    a : ?;
    b : ?;
}


fun kju() : Unit
{
    var a : ?;
    a = new(A);
    a.a = 3;
    a.b = true;
}
