examples/kju/negative/type_inference/ambiguous_struct_type.kju
struct A
{
    a : ?;
}


fun kju() : Unit
{
}
